fixed alignments

--- a/Aesthetech/styles.css
+++ b/Aesthetech/styles.css
@@ -5,6 +5,8 @@
 }
 body {
 	background-color: #0b032d;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 p,
@@ -28,13 +30,13 @@ li {
 
 .wrapper {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 }
 
 .flexboxItem {
-	width: 30%;
-	margin: 10px;
+	width: 100%;
+	margin: 0px;
 	/* border: 3px solid #f67e7d; */
 }
 
@@ -43,19 +45,20 @@ li {
 }
 
 #ijasImage {
-	width: 100%;
+	width: 70%;
 	border-radius: 20%;
 }
 
 .ijasImageContainer {
 	display: flex;
 	justify-content: center;
+	margin: 0px;
 	animation: right-load 1s;
 }
 
 nav {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	min-height: 8vh;
 	background-color: #0b032d;
@@ -72,7 +75,7 @@ nav {
 .nav-links {
 	display: flex;
 	justify-content: space-around;
-	width: 30%;
+	width: 50%;
 }
 .nav-links ul {
 	list-style: none;
@@ -113,15 +116,13 @@ nav {
 	transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 1024px) {
-	.nav-links {
-		display: flex;
-		justify-content: space-around;
-		width: 50%;
-	}
-}
-
 @media screen and (max-width: 768px) {
+	* {
+		margin: 0px;
+		padding: 0px;
+		box-sizing: border-box;
+	}
+
 	body {
 		overflow-x: hidden;
 	}
@@ -152,6 +153,22 @@ nav {
 
 	.burger {
 		display: block;
+	}
+
+	.wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		margin-top: 10px;
+	}
+	.flexboxItem {
+		width: 100%;
+		margin-bottom: 30px;
+		/* border: 3px solid #f67e7d; */
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 	}
 }
 
